tests/negative-fixtures/banned_hashmap_import_alias/src/lib.rs
use std::collections::HashMap as UnorderedMap;

pub fn unordered_map() -> UnorderedMap<String, u8> {
    UnorderedMap::new()
}
